--- a/src/index.html
+++ b/src/index.html
@@ -45,8 +45,9 @@
       </form>
 
       
-      <input type="checkbox" name="mood" onchange="theme()" id="light-dark">
-   
+      <!-- <input type="checkbox" name="mood" onchange="theme()" id="light-dark"> -->
+      <button onclick="myFunction()">Toggle dark mode</button>
+
 
       <div class="menu-icons">
           
@@ -72,21 +73,24 @@
       <div class="catagories">
         <div class="catagories-section">
           <span class="category">
-            <img src="./img/home.svg" alt="Home" class="icon" />
+            <i class="fas fa-home icon"></i>
+            <!-- <img src="./img/home.svg" alt="Home" class="icon" /> -->
             <span>Home</span>
           </span>
 
           <span class="category">
-            <img src="./img/trending.svg" alt="Trending" class="icon" />
+            <i class="fas fa-fire icon"></i>
+            <!-- <img src="./img/trending.svg" alt="Trending" class="icon" /> -->
             <span>Trending</span>
           </span>
 
           <span class="category">
-            <img
+            <i class="fas fa-video icon"></i>
+            <!-- <img
               src="./img/subscriptions.svg"
               alt="subscriptions"
               class="icon"
-            />
+            /> -->
             <span>Subscriptions</span>
           </span>
           <br>
@@ -97,32 +101,38 @@
         <div class="catagories">
           <div class="catagories-section">
             <span class="category">
-              <img src="./img/library.svg" alt="library" class="icon" />
+              <!-- <img src="./img/library.svg" alt="library" class="icon" /> -->
+              <i class="fas fa-photo-video icon"></i>
               <span>library</span>
             </span>
 
             <span class="category">
-              <img src="./img/history.svg" alt="History" class="icon" />
+              <!-- <img src="./img/history.svg" alt="History" class="icon" /> -->
+              <i class="fas fa-history  icon"></i>
               <span>History</span>
             </span>
 
             <span class="category">
-              <img src="./img/your_videos.svg" alt="Your videos" class="icon" />
+                <i class="far fa-play-circle icon"></i>
+              <!-- <img src="./img/your_videos.svg" alt="Your videos" class="icon" /> -->
               <span>Your videos</span>
             </span>
 
             <span class="category">
-              <img
+              <!-- <img
                 src="./img/watch_later-.svg"
                 alt="Watch Later"
                 class="icon"
-              />
+              /> -->
+              <i class="fas fa-clock icon"></i>
               <span>Watch Later</span>
             </span>
 
             <span class="category">
-              <img src="./img/like.svg" alt="Liked Videos" class="icon" />
+              <!-- <img src="./img/like.svg" alt="Liked Videos" class="icon" /> -->
+              <i class="fas fa-thumbs-up icon"></i>
               <span>Liked videos</span>
+
             </span>
           </div>
         </div>
